<resources>
    <string name="app_name">Kuwas</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="choose_favorite_team">Choose Favorite Team</string>
    <string name="continue_text">Continue</string>
    <string name="select_atleast_one_team">select atleast one team</string>
    <string name="hash_tag_symbol">#</string>
    <string name="player_s_team_icon">Player\'s team icon</string>
    <string name="player_s_country">Player\'s country</string>
    <string name="update_available">Update Available</string>
    <string name="support_development">Support Development</string>
    <string name="support_the_development_of_kuwas_application">Support the development of kuwas application</string>
    <string name="donate_5_birr">Donate 5 Birr</string>
    <string name="donate_10_birr">Donate 10 Birr</string>
    <string name="donate_15_birr">Donate 15 Birr</string>
    <string name="donate_20_birr">Donate 20 Birr</string>
    <string name="rate_us_on_playstore">Rate This App On PlayStore</string>
    <string name="about_kuwas">About Kuwas</string>
    <string name="libraries_used">Libraries Used</string>
    <string name="brook_mg">Brook MG</string>
    <string name="twitter">Twitter</string>
    <string name="e_mail">E-mail</string>
    <string name="team_information">Team Information</string>
    <string name="player_s_number">Player\'s Number</string>
    <string name="player_s_position">Player\'s Position</string>
    <string name="player_s_previous_teams">Player\'s Previous Teams</string>
    <string name="news_tab">News</string>
    <string name="scores_tab">Scores</string>
    <string name="standing_tab">Standing</string>
    <string name="refresh_all">Refresh All</string>
    <string name="menu">Menu</string>
    <string name="theme">Theme</string>
    <string name="something_went_wrong_while_processing_data">Something went wrong while processing data.</string>
    <string name="refresh">Refresh</string>
</resources>
