<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/top_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fitsSystemWindows="false"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--  app:layout_behavior="@string/appbar_scrolling_view_behavior" -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        app:liftOnScroll="true"
        app:elevation="5dp"
        app:expanded="true"
        android:background="?attr/appBackgroundColorTransparent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="enterAlwaysCollapsed"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/menu_btn"
                android:layout_width="wrap_content"
                android:padding="16dp"
                android:background="@android:color/transparent"
                app:backgroundTint="@android:color/transparent"
                android:layout_gravity="start"
                app:srcCompat="@drawable/ic_menu"
                android:tint="?attr/appTextColorPrimary"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:text="@string/app_name"
                android:textColor="?attr/appTextColorPrimary"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            app:tabTextColor="?attr/appTextColorPrimary"
            app:layout_scrollFlags="snap"
            android:id="@+id/tab_layout"
            app:tabContentStart="32dp"
            app:tabMode="scrollable"
            app:layout_scrollInterpolator="@android:anim/overshoot_interpolator"
            app:tabSelectedTextColor="?attr/appAccentColor"
            app:tabIndicatorColor="?attr/appAccentColor"
            app:tabIndicatorFullWidth="false"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/news_tab"
                android:layout_width="wrap_content"
                android:text="@string/news_tab"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/scores_tab"
                android:layout_width="wrap_content"
                android:text="@string/scores_tab"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/teams_tab"
                android:layout_width="wrap_content"
                android:text="@string/standing_tab"
                android:layout_height="wrap_content" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/refresh_fab"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|end"
        app:elevation="5dp"
        android:text="@string/refresh_all"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="?attr/appAccentColor"
        app:cornerRadius="4dp"
        app:icon="@drawable/ic_first"
        app:layout_anchorGravity="bottom|end"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>