<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Brook Mezgebu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SupportDevelopmentActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:tint="@color/black_0"
        app:fabSize="mini"
        app:backgroundTint="@color/white_0"
        android:layout_marginLeft="8dp"
        app:rippleColor="@color/green_1"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/support_development_anim"
        android:layout_width="0dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toTopOf="@+id/support_development"
        app:layout_constraintEnd_toEndOf="@+id/support_development"
        app:layout_constraintStart_toStartOf="@+id/support_development"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_scale="0.3"
        app:lottie_loop="true"
        app:lottie_fileName="support.json"
        android:scaleType="fitXY"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/support_development"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:padding="16dp"
        android:text="@string/support_the_development_of_kuwas_application"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/black_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/support_development_anim" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/donate_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:tint="@color/green_0"
        app:layout_constraintTop_toBottomOf="@+id/support_development"
        app:srcCompat="@drawable/ic_drink"
        android:contentDescription="@string/donate_5_birr"
        app:layout_constraintEnd_toStartOf="@+id/donate_10"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/donate_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/ic_taxi"
        app:tint="@color/green_0"
        android:contentDescription="@string/donate_10_birr"
        app:layout_constraintTop_toBottomOf="@+id/support_development"
        app:layout_constraintEnd_toStartOf="@+id/donate_15"
        app:layout_constraintStart_toEndOf="@+id/donate_5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/donate_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/ic_pizza"
        app:layout_constraintTop_toBottomOf="@+id/support_development"
        app:tint="@color/green_0"
        android:contentDescription="@string/donate_15_birr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donate_10" />

    <LinearLayout
        android:id="@+id/split_container"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/donate_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/dash_1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:background="@color/black_0"
            android:alpha="0.5"
            android:layout_height="1dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/or_text"
            android:text="OR"
            android:layout_weight="1"
            android:textColor="@color/black_0"
            android:alpha="0.5"
            android:gravity="center"
            android:padding="10dp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/dash_2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:alpha="0.5"
            android:background="@color/black_0"
            android:layout_margin="10dp"
            android:layout_height="1dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rate_us"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:backgroundTint="@color/green_0"
        android:textColor="@color/white_0"
        app:layout_constraintTop_toBottomOf="@+id/split_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rate_us_on_playstore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>