<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Brook Mezgebu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.AboutActivity">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:backgroundTint="@color/white_0"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/green_1"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/black_0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/about_kuwas"
            app:layout_constraintTop_toTopOf="@+id/back_button"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/black_0"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_content_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/support_development"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/support_development"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/main_content_recycler_view"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/black_0"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/split_container"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/support_development"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/dash_1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="10dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:background="@color/black_0"
                android:alpha="0.5"
                android:layout_height="1dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/or_text"
                android:text="OR"
                android:layout_weight="1"
                android:textColor="@color/black_0"
                android:alpha="0.5"
                android:gravity="center"
                android:padding="10dp"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/dash_2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:alpha="0.5"
                android:background="@color/black_0"
                android:layout_margin="10dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/libraries_used_text_view"
            app:layout_constraintTop_toBottomOf="@+id/split_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/libraries_used"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/black_0"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/libraries_used_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/libraries_used_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>